WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47697
[chromium] context-attributes-etc conformance test fails in DRT
https://bugs.webkit.org/show_bug.cgi?id=47697
Summary
[chromium] context-attributes-etc conformance test fails in DRT
Adrienne Walker
Reported
2010-10-14 16:13:50 PDT
I updated context-attributes-alpha-depth-stencil-antialias.html in the Khronos repository and was hoping to push that updated test into WebKit. This test runs correctly in Chromium on Linux, but fails the antialias=true test when running in DRT on the same machine. I tried several variations on the existing test, but could not get Mesa to produce anything other than a pixel that was fully obscured or unobscured. Mesa reports that it is using multisampling, which is why the test fails. One possibility to fix this might be to have Mesa not use multisampling at all for WebGL. We already do this for the canvas case.
Attachments
Patch
(15.03 KB, patch)
2010-10-15 14:31 PDT
,
Adrienne Walker
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2010-10-14 17:42:08 PDT
(In reply to
comment #0
)
> One possibility to fix this might be to have Mesa not use multisampling at all for WebGL. We already do this for the canvas case.
This should be pretty easy. By including app/gfx/gl_implementation.h you can query whether Mesa is in use after creating the context.
Adrienne Walker
Comment 2
2010-10-15 14:31:27 PDT
Created
attachment 70898
[details]
Patch
Kenneth Russell
Comment 3
2010-10-18 14:04:01 PDT
Comment on
attachment 70898
[details]
Patch Generally looks good, but have you checked in the modified context-attributes-alpha-depth-stencil-antialias.html upstream to the Khronos repository?
Adrienne Walker
Comment 4
2010-10-18 14:07:57 PDT
(In reply to
comment #3
)
> (From update of
attachment 70898
[details]
) > Generally looks good, but have you checked in the modified context-attributes-alpha-depth-stencil-antialias.html upstream to the Khronos repository?
I did that first. It was when I tried to push it into WebKit that I ran into this issue with Mesa.
Kenneth Russell
Comment 5
2010-10-18 14:19:02 PDT
Comment on
attachment 70898
[details]
Patch OK. One issue. Using shouldBeNonNull in the updated tests is not really correct. There should probably be a new predicate "shouldNotBeUndefined" in js-test-pre.js. Adding this will require updating several layout tests: fast/js/script-tests/global-constructors.js fast/dom/script-tests/constructed-objects-prototypes.js fast/dom/script-tests/prototype-inheritance-2.js fast/dom/script-tests/prototype-inheritance.js fast/dom/Window/script-tests/window-property-descriptors.js fast/dom/Window/window-properties.html I'll r+/cq+ this but please file a bug to add this primitive and update the test to use it.
Adrienne Walker
Comment 6
2010-10-18 14:46:03 PDT
(In reply to
comment #5
)
> (From update of
attachment 70898
[details]
) > OK. One issue. Using shouldBeNonNull in the updated tests is not really correct. There should probably be a new predicate "shouldNotBeUndefined" in js-test-pre.js. Adding this will require updating several layout tests: > > fast/js/script-tests/global-constructors.js > fast/dom/script-tests/constructed-objects-prototypes.js > fast/dom/script-tests/prototype-inheritance-2.js > fast/dom/script-tests/prototype-inheritance.js > fast/dom/Window/script-tests/window-property-descriptors.js > fast/dom/Window/window-properties.html > > I'll r+/cq+ this but please file a bug to add this primitive and update the test to use it.
Ah, you're quite right that I should be testing against undefined instead of null. Why does adding this function to js-test-pre.js require touching all those other tests?
WebKit Commit Bot
Comment 7
2010-10-18 14:54:07 PDT
Comment on
attachment 70898
[details]
Patch Clearing flags on attachment: 70898 Committed
r69996
: <
http://trac.webkit.org/changeset/69996
>
WebKit Commit Bot
Comment 8
2010-10-18 14:54:12 PDT
All reviewed patches have been landed. Closing bug.
Adrienne Walker
Comment 9
2010-10-18 14:55:14 PDT
> I'll r+/cq+ this but please file a bug to add this primitive and update the test to use it.
Filed here:
https://bugs.webkit.org/show_bug.cgi?id=47853
Kenneth Russell
Comment 10
2010-10-18 14:58:27 PDT
(In reply to
comment #6
)
> (In reply to
comment #5
) > > (From update of
attachment 70898
[details]
[details]) > > OK. One issue. Using shouldBeNonNull in the updated tests is not really correct. There should probably be a new predicate "shouldNotBeUndefined" in js-test-pre.js. Adding this will require updating several layout tests: > > > > fast/js/script-tests/global-constructors.js > > fast/dom/script-tests/constructed-objects-prototypes.js > > fast/dom/script-tests/prototype-inheritance-2.js > > fast/dom/script-tests/prototype-inheritance.js > > fast/dom/Window/script-tests/window-property-descriptors.js > > fast/dom/Window/window-properties.html > > > > I'll r+/cq+ this but please file a bug to add this primitive and update the test to use it. > > Ah, you're quite right that I should be testing against undefined instead of null. > > Why does adding this function to js-test-pre.js require touching all those other tests?
Those tests verify that the identifiers attached to the window object are all known. They prevent accidental introduction of new functions at the global scope.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug