2010-10-18  Adrienne Walker  <enne@google.com>

Reviewed by Kenneth Russell.

        Update context attribute conformance test from updated Khronos source.
        https://bugs.webkit.org/show_bug.cgi?id=47697

        * fast/canvas/webgl/context-attributes-alpha-depth-stencil-antialias-expected.txt:
        * fast/canvas/webgl/context-attributes-alpha-depth-stencil-antialias.html:
        * platform/chromium/test_expectations.txt:
2010-10-18  Adrienne Walker  <enne@google.com>

        Reviewed by Kenneth Russell.

        Turn off antialiasing when using Mesa during testing.
        https://bugs.webkit.org/show_bug.cgi?id=47697

        * src/WebGraphicsContext3DDefaultImpl.cpp:
        (WebKit::WebGraphicsContext3DDefaultImpl::validateAttributes):

Canonical link: https://commits.webkit.org/60561@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69996 268f45cc-cd09-0410-ab3c-d52691b4dbfc